--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,8 +2,8 @@ trigger:
   batch: true
   branches:
     include:
-    - main
-    - qa
+    - master
+    - QA
 
  
 
@@ -38,7 +38,7 @@ stages:
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         inlineScript: |
-          cd $(System.DefaultWorkingDirectory)/terraform_files
+          cd $(System.DefaultWorkingDirectory)/$(Build. SourceBranchName)/terraform_files
           terraform init -reconfigure -backend-config="access_key=$(TF_BACKEND_ACCESS_KEY)"
           terraform plan 
           terraform apply --auto-approve
@@ -52,8 +52,8 @@ stages:
       inputs:
             targetType: 'inline'
             script: |
-              cd $(System.DefaultWorkingDirectory)/kubernetes
-              az aks get-credentials --resource-group mini-project --name AKS --overwrite-existing
+              cd $(System.DefaultWorkingDirectory)/$(Build. SourceBranchName)/kubernetes
+              az aks get-credentials --resource-group mini-project-QA --name AKS-QA --overwrite-existing
               export new_test=$(test)
               envsubst < secretsproviderclass.yaml > secretsproviderclass-new.yaml
               kubectl apply -f secretsproviderclass-new.yaml
