--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,7 +53,7 @@ stages:
             targetType: 'inline'
             script: |
               cd $(System.DefaultWorkingDirectory)/$(Build. SourceBranchName)/kubernetes
-              az aks get-credentials --resource-group mini-project-PROD --name AKS-PROD --overwrite-existing
+              az aks get-credentials --resource-group mini-project-master --name AKS-master --overwrite-existing
               export new_test=$(test)
               envsubst < secretsproviderclass.yaml > secretsproviderclass-new.yaml
               kubectl apply -f secretsproviderclass-new.yaml
