--- a/master/kubernetes/secretsproviderclass.yaml
+++ b/master/kubernetes/secretsproviderclass.yaml
@@ -18,7 +18,7 @@ spec:
     usePodIdentity: "false"  
     useVMManagedIdentity: "true"  
     userAssignedIdentityID: "$new_test"
-    keyvaultName: "kvdinesh007"
+    keyvaultName: "kvdinesh007-PROD"
     objects:  |
       array:
         - |
