--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ stages:
   displayName: 'Build Docker image'
   jobs:
   - job: BuildJob
-    displayName: 'Build and Push'
+    displayName: 'Build and Pushes'
     steps:
     - checkout: self
     
