--- a/QA/kubernetes/secretsproviderclass.yaml
+++ b/QA/kubernetes/secretsproviderclass.yaml
@@ -1,7 +1,7 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
-  name: azure-kvname
+  name: azure-kvname-qa
 spec:
   provider: azure
   secretObjects:
@@ -18,7 +18,7 @@ spec:
     usePodIdentity: "false"  
     useVMManagedIdentity: "true"  
     userAssignedIdentityID: "$new_test"
-    keyvaultName: "kvdinesh007"
+    keyvaultName: "kvdinesh007-QA"
     objects:  |
       array:
         - |
