--- a/QA/kubernetes/db-deployment.yaml
+++ b/QA/kubernetes/db-deployment.yaml
@@ -45,4 +45,4 @@ spec:
           driver: secrets-store.csi.k8s.io
           readOnly: true
           volumeAttributes:
-            secretProviderClass: azure-kvname
+            secretProviderClass: azure-kvname-qa
