--- a/QA/kubernetes/webapp-deployment.yaml
+++ b/QA/kubernetes/webapp-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: web-app
-        image: dineshmk/node-app:latestt
+        image: dineshmk/node-app:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 80
