--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ stages:
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
         tags: '$(IMAGE_NAME)'
-  
+   
     
     - task: AzureCLI@2
       name: terraformApply
@@ -46,7 +46,16 @@ stages:
           echo $client_id
           echo "##vso[task.setvariable variable=test]$client_id"
           echo $(test)
-               
+    - task: Bash@3
+      inputs:
+        targetType: 'inline'
+        script: |
+           key_id=$(key_vault)
+            echo $key_id
+            echo "##vso[task.setvariable variable=key]$key_id"
+            echo $(key)
+              export new_key=$(key)
+              envsubst < app.py > app-new.py 
     - task: Bash@3
       inputs:
             targetType: 'inline'
