--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,7 +59,7 @@ stages:
         targetType: 'inline'
         script: |
           cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/kubernetes
-          az aks get-credentials --resource-group mini-project-PROD --name AKS-PROD --overwrite-existing
+          az aks get-credentials --resource-group mini-project-QA --name AKS-QA --overwrite-existing
           export new_test=$(test)
           envsubst < secretsprovider_class.yaml > secretsprovider_class-new.yaml
           kubectl apply -f secretsprovider_class-new.yaml
