--- a/QA/kubernetes/webapp_deployment.yaml
+++ b/QA/kubernetes/webapp_deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: web-app
-        image: dineshmk/node-app:latest
+        image: dineshmk/node-app:QA
         imagePullPolicy: Always
         ports:
         - containerPort: 80
