--- a/QA/kubernetes/webapp_deployment.yaml
+++ b/QA/kubernetes/webapp_deployment.yaml
@@ -23,7 +23,7 @@ spec:
         - name: DB_HOST
           value: db-server
         - name: key_vault_url
-          value: ""  
+          value: "https://kvdinesh007-qa.vault.azure.net"  
         - name: DB_PORT
           value: "3306"
         - name: DB_NAME
