--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,14 +10,14 @@ pr: none
 pool:
   name: Agent001
 
-stages:
-- stage: Build
-  displayName: 'Build Docker image'
-  jobs:
-  - job: BuildAndPushDocker
-    pool:
-      name: Agent001
-    steps:
+# stages:
+# - stage: Build
+#   displayName: 'Build Docker image'
+#   jobs:
+#   - job: BuildAndPushDocker
+#     pool:
+#       name: Agent001
+#     steps:
    
     # - script: |
        
@@ -26,13 +26,13 @@ stages:
     #     cd $(System.DefaultWorkingDirectory)
     #     cp app-$(Build.SourceBranchName).py app.py
     #   displayName: 'Prepare app.py'
-    - task: Docker@2
-      inputs:
-        containerRegistry: 'docker'
-        repository: 'dineshmk/node-app'
-        command: 'buildAndPush'
-        Dockerfile: '**/Dockerfile'
-        tags: '$(Build.SourceBranchName)'
+    # - task: Docker@2
+    #   inputs:
+    #     containerRegistry: 'docker'
+    #     repository: 'dineshmk/node-app'
+    #     command: 'buildAndPush'
+    #     Dockerfile: '**/Dockerfile'
+    #     tags: '$(Build.SourceBranchName)'
 
    
 
@@ -52,19 +52,20 @@ stages:
           echo $client_id
           echo "##vso[task.setvariable variable=test]$client_id"
           echo $(test)
-    - task: Bash@3
-      inputs:
-        targetType: 'inline'
-        script: |
-          cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/kubernetes
-          az aks get-credentials --resource-group mini-project-QA --name AKS-QA --overwrite-existing
-          export new_test=$(test)
-          envsubst < secretsprovider_class.yaml > secretsprovider_class-new.yaml
-          kubectl apply -f secretsprovider_class-new.yaml
-          kubectl apply -f webapp_deployment.yaml
-          kubectl apply -f webapp_service.yaml
-          kubectl apply -f db_deployment.yaml
-          kubectl apply -f db_service.yaml
-          kubectl apply -f hpa_web.yaml
-          cat secretsprovider_class-new.yaml
-          cat webapp_deployment.yaml
+          
+    # - task: Bash@3
+    #   inputs:
+    #     targetType: 'inline'
+    #     script: |
+    #       cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/kubernetes
+    #       az aks get-credentials --resource-group mini-project-QA --name AKS-QA --overwrite-existing
+    #       export new_test=$(test)
+    #       envsubst < secretsprovider_class.yaml > secretsprovider_class-new.yaml
+    #       kubectl apply -f secretsprovider_class-new.yaml
+    #       kubectl apply -f webapp_deployment.yaml
+    #       kubectl apply -f webapp_service.yaml
+    #       kubectl apply -f db_deployment.yaml
+    #       kubectl apply -f db_service.yaml
+    #       kubectl apply -f hpa_web.yaml
+    #       cat secretsprovider_class-new.yaml
+    #       cat webapp_deployment.yaml
