--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ pool:
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         inlineScript: |
-          cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/terraform_files
+          cd $(System.DefaultWorkingDirectory)modules
           terraform init -reconfigure -backend-config="access_key=$(TF_BACKEND_ACCESS_KEY)"
           terraform plan 
           terraform apply --auto-approve
@@ -52,7 +52,7 @@ pool:
           echo $client_id
           echo "##vso[task.setvariable variable=test]$client_id"
           echo $(test)
-          
+
     # - task: Bash@3
     #   inputs:
     #     targetType: 'inline'
