--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,19 +53,19 @@ stages:
           echo "##vso[task.setvariable variable=test]$client_id"
           echo $(test)
 
-    # - task: Bash@3
-    #   inputs:
-    #     targetType: 'inline'
-    #     script: |
-    #       cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/kubernetes
-    #       az aks get-credentials --resource-group mini-project-QA --name AKS-QA --overwrite-existing
-    #       export new_test=$(test)
-    #       envsubst < secretsprovider_class.yaml > secretsprovider_class-new.yaml
-    #       kubectl apply -f secretsprovider_class-new.yaml
-    #       kubectl apply -f webapp_deployment.yaml
-    #       kubectl apply -f webapp_service.yaml
-    #       kubectl apply -f db_deployment.yaml
-    #       kubectl apply -f db_service.yaml
-    #       kubectl apply -f hpa_web.yaml
-    #       cat secretsprovider_class-new.yaml
-    #       cat webapp_deployment.yaml
+    - task: Bash@3
+      inputs:
+        targetType: 'inline'
+        script: |
+          cd $(System.DefaultWorkingDirectory)/QA/kubernetes
+          az aks get-credentials --resource-group mini-project-QA --name AKS-QA --overwrite-existing
+          export new_test=$(test)
+          envsubst < secretsprovider_class.yaml > secretsprovider_class-new.yaml
+          kubectl apply -f secretsprovider_class-new.yaml
+          kubectl apply -f webapp_deployment.yaml
+          kubectl apply -f webapp_service.yaml
+          kubectl apply -f db_deployment.yaml
+          kubectl apply -f db_service.yaml
+          kubectl apply -f hpa_web.yaml
+          cat secretsprovider_class-new.yaml
+          cat webapp_deployment.yaml
