--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,20 +19,20 @@ stages:
       name: Agent001
     steps:
    
-    # - script: |
+    - script: |
        
 
-    #     # Copy the appropriate 'app.py' based on the environment
-    #     cd $(System.DefaultWorkingDirectory)
-    #     cp app-$(Build.SourceBranchName).py app.py
-    #   displayName: 'Prepare app.py'
-    # - task: Docker@2
-    #   inputs:
-    #     containerRegistry: 'docker'
-    #     repository: 'dineshmk/node-app'
-    #     command: 'buildAndPush'
-    #     Dockerfile: '**/Dockerfile'
-    #     tags: '$(Build.SourceBranchName)'
+        # Copy the appropriate 'app.py' based on the environment
+        cd $(System.DefaultWorkingDirectory)
+        cp app-$(Build.SourceBranchName).py app.py
+      displayName: 'Prepare app.py'
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'docker'
+        repository: 'dineshmk/node-app'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
+        tags: '$(Build.SourceBranchName)'
 
    
 
@@ -57,7 +57,7 @@ stages:
       inputs:
         targetType: 'inline'
         script: |
-          cd $(System.DefaultWorkingDirectory)/QA/kubernetes
+          cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/kubernetes
           az aks get-credentials --resource-group mini-project-QA --name AKS-QA --overwrite-existing
           export new_test=$(test)
           envsubst < secretsprovider_class.yaml > secretsprovider_class-new.yaml
