--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,12 +61,12 @@ stages:
           cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/kubernetes
           az aks get-credentials --resource-group mini-project-PROD --name AKS-PROD --overwrite-existing
           export new_test=$(test)
-          envsubst < secretsprovider_class.yaml > secretsprovider_class-new.yaml
-          kubectl apply -f secretsprovider_class-new.yaml
-          kubectl apply -f webapp_deployment.yaml
-          kubectl apply -f webapp_service.yaml
-          kubectl apply -f db_deployment.yaml
-          kubectl apply -f db_service.yaml
-          kubectl apply -f hpa_web.yaml
-          cat secretsprovider_class-new.yaml
-          cat webapp_deployment.yaml
+          envsubst < secretsproviderclass.yaml > secretsproviderclass-new.yaml
+          kubectl apply -f secretsproviderclass-new.yaml
+          kubectl apply -f webapp-deployment.yaml
+          kubectl apply -f webapp-service.yaml
+          kubectl apply -f db-deployment.yaml
+          kubectl apply -f db-service.yaml
+          kubectl apply -f hpaweb.yaml
+          cat secretsproviderclass-new.yaml
+          cat webapp-deployment.yaml
