--- a/QA/kubernetes/secretsprovider_class.yaml
+++ b/QA/kubernetes/secretsprovider_class.yaml
@@ -17,7 +17,7 @@ spec:
   parameters:
     usePodIdentity: "false"  
     useVMManagedIdentity: "true"  
-    userAssignedIdentityID: "$new_test"
+    userAssignedIdentityID: "019054da-672d-4f7d-ac46-dcf26a97d446"              #"$new_test"
     keyvaultName: "kvdinesh007-QA"
     objects:  |
       array:
