--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,13 +20,6 @@ stages:
       name: Agent001
     steps:
    
-    # - script: |
-       
-
-    #     # Copy the appropriate 'app.py' based on the environment
-    #     cd $(System.DefaultWorkingDirectory)
-    #     cp app-$(Build.SourceBranchName).py app.py
-    #   displayName: 'Prepare app.py'
     
     - task: Docker@2
       inputs:
@@ -45,7 +38,7 @@ stages:
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         inlineScript: |
-          cd $(System.DefaultWorkingDirectory)/terraform
+          cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/terraform
           terraform init -reconfigure -backend-config="access_key=$(TF_BACKEND_ACCESS_KEY)"
           terraform plan 
           terraform apply --auto-approve
