--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ stages:
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         inlineScript: |
-          cd $(System.DefaultWorkingDirectory)/terraform
+          cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/terraform
           terraform init -reconfigure -backend-config="access_key=$(TF_BACKEND_ACCESS_KEY)"
           terraform plan 
           terraform apply --auto-approve
@@ -55,12 +55,12 @@ stages:
           cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/kubernetes
           az aks get-credentials --resource-group mini-project-$(Build.SourceBranchName) --name AKS-$(Build.SourceBranchName) --overwrite-existing
           export new_test=$(test)
-          envsubst < secretsprovider_class.yaml > secretsprovider_class-new.yaml
-          kubectl apply -f secretsprovider_class-new.yaml
-          kubectl apply -f webapp_deployment.yaml
-          kubectl apply -f webapp_service.yaml
-          kubectl apply -f db_deployment.yaml
-          kubectl apply -f db_service.yaml
-          kubectl apply -f hpa_web.yaml
-          cat secretsprovider_class-new.yaml
-          cat webapp_deployment.yaml
+          envsubst < secretsproviderclass.yaml > secretsproviderclass-new.yaml
+          kubectl apply -f secretsproviderclass-new.yaml
+          kubectl apply -f webapp-deployment.yaml
+          kubectl apply -f webapp-service.yaml
+          kubectl apply -f db-deployment.yaml
+          kubectl apply -f db-service.yaml
+          kubectl apply -f hpaweb.yaml
+          cat secretsproviderclass-new.yaml
+          cat webapp-deployment.yaml
