--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,18 +31,18 @@ stages:
     #     tags: 'latest'
 
    
-
-    - task: AzureCLI@2
-      name: terraformApply
-      inputs:
-        azureSubscription: 'azure'
-        scriptType: 'bash'
-        scriptLocation: 'inlineScript'
-        inlineScript: |
-          cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/terraform
-          echo $(secret1)
-          export TF_VAR_value1=$(secret1)
-          echo $(TF_VAR_value1)
+      
+    # - task: AzureCLI@2
+    #   name: terraformApply
+    #   inputs:
+    #     azureSubscription: 'azure'
+    #     scriptType: 'bash'
+    #     scriptLocation: 'inlineScript'
+    #     inlineScript: |
+    #       cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/terraform
+    #       echo $(secret1)
+    #       export TF_VAR_value1=$(secret1)
+    #       echo $(TF_VAR_value1)
             # terraform init -reconfigure -backend-config="access_key=$(TF_BACKEND_ACCESS_KEY)"
             # terraform plan 
             # terraform apply --auto-approve
