--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,8 +11,8 @@ pr: none
 
 pool:
   name: Agent001
-variables: 
-    TF_VAR_USER_NAME: $(secret1)
+# variables: 
+#     TF_VAR_USER_NAME: $(secret1)
 stages:
 - stage: Build
   displayName: 'Build Docker image'
@@ -23,13 +23,13 @@ stages:
     steps:
    
     
-    # - task: Docker@2
-    #   inputs:
-    #     containerRegistry: 'docker'
-    #     repository: 'dineshmk/node-app'
-    #     command: 'buildAndPush'
-    #     Dockerfile: '**/Dockerfile'
-    #     tags: 'latest'
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'docker'
+        repository: 'dineshmk/node-app'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
+        tags: 'latest'
 
      
       
@@ -41,31 +41,31 @@ stages:
         scriptLocation: 'inlineScript'
         inlineScript: |
           cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/terraform
-          echo $(secret1)
-          
-          echo $(TF_VAR_USER_NAME)
+           #  echo $(secret1)
+           # echo $(TF_VAR_USER_NAME)
+           
             terraform init -reconfigure -backend-config="access_key=$(TF_BACKEND_ACCESS_KEY)"
-            terraform plan -var "USER_NAME=$(TF_VAR_USER_NAME)"
-            # terraform apply --auto-approve
-            # terraform apply -refresh-only -auto-approve
-            # client_id=$(terraform output kubelet_identity_client_id)
-            # echo $client_id
-            # echo "##vso[task.setvariable variable=test]$client_id"
-            # echo $(test)
+            terraform plan                 #-var "USER_NAME=$(TF_VAR_USER_NAME)"
+            terraform apply --auto-approve
+            terraform apply -refresh-only -auto-approve
+            client_id=$(terraform output kubelet_identity_client_id)
+            echo $client_id
+            echo "##vso[task.setvariable variable=test]$client_id"
+            echo $(test)
 
-    # - task: Bash@3
-    #   inputs:
-    #     targetType: 'inline'
-    #     script: |
-    #       cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/kubernetes
-    #       az aks get-credentials --resource-group mini-project-$(Build.SourceBranchName) --name AKS-$(Build.SourceBranchName) --overwrite-existing
-    #       export new_test=$(test)
-    #       envsubst < secretsproviderclass.yaml > secretsproviderclass-new.yaml
-    #       kubectl apply -f secretsproviderclass-new.yaml
-    #       kubectl apply -f webapp-deployment.yaml
-    #       kubectl apply -f webapp-service.yaml
-    #       kubectl apply -f db-deployment.yaml
-    #       kubectl apply -f db-service.yaml
-    #       kubectl apply -f hpaweb.yaml
-    #       cat secretsproviderclass-new.yaml
-    #       cat webapp-deployment.yaml
+    - task: Bash@3
+      inputs:
+        targetType: 'inline'
+        script: |
+          cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/kubernetes
+          az aks get-credentials --resource-group mini-project-$(Build.SourceBranchName) --name AKS-$(Build.SourceBranchName) --overwrite-existing
+          export new_test=$(test)
+          envsubst < secretsproviderclass.yaml > secretsproviderclass-new.yaml
+          kubectl apply -f secretsproviderclass-new.yaml
+          kubectl apply -f webapp-deployment.yaml
+          kubectl apply -f webapp-service.yaml
+          kubectl apply -f db-deployment.yaml
+          kubectl apply -f db-service.yaml
+          kubectl apply -f hpaweb.yaml
+          cat secretsproviderclass-new.yaml
+          cat webapp-deployment.yaml
