--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,13 +23,13 @@ stages:
     steps:
    
     
-    - task: Docker@2
-      inputs:
-        containerRegistry: 'docker'
-        repository: 'dineshmk/node-app'
-        command: 'buildAndPush'
-        Dockerfile: '**/Dockerfile'
-        tags: 'latest'
+    # - task: Docker@2
+    #   inputs:
+    #     containerRegistry: 'docker'
+    #     repository: 'dineshmk/node-app'
+    #     command: 'buildAndPush'
+    #     Dockerfile: '**/Dockerfile'
+    #     tags: 'latest'
 
      
       
