--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,19 +53,19 @@ stages:
             echo "##vso[task.setvariable variable=test]$client_id"
             echo $(test)
 
-    - task: Bash@3
-      inputs:
-        targetType: 'inline'
-        script: |
-          cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/kubernetes
-          az aks get-credentials --resource-group mini-project-$(Build.SourceBranchName) --name AKS-$(Build.SourceBranchName) --overwrite-existing
-          export new_test=$(test)
-          envsubst < secretsproviderclass.yaml > secretsproviderclass-new.yaml
-          kubectl apply -f secretsproviderclass-new.yaml
-          kubectl apply -f webapp-deployment.yaml
-          kubectl apply -f webapp-service.yaml
-          kubectl apply -f db-deployment.yaml
-          kubectl apply -f db-service.yaml
-          kubectl apply -f hpaweb.yaml
-          cat secretsproviderclass-new.yaml
-          cat webapp-deployment.yaml
+    # - task: Bash@3
+    #   inputs:
+    #     targetType: 'inline'
+    #     script: |
+    #       cd $(System.DefaultWorkingDirectory)/$(Build.SourceBranchName)/kubernetes
+    #       az aks get-credentials --resource-group mini-project-$(Build.SourceBranchName) --name AKS-$(Build.SourceBranchName) --overwrite-existing
+    #       export new_test=$(test)
+    #       envsubst < secretsproviderclass.yaml > secretsproviderclass-new.yaml
+    #       kubectl apply -f secretsproviderclass-new.yaml
+    #       kubectl apply -f webapp-deployment.yaml
+    #       kubectl apply -f webapp-service.yaml
+    #       kubectl apply -f db-deployment.yaml
+    #       kubectl apply -f db-service.yaml
+    #       kubectl apply -f hpaweb.yaml
+    #       cat secretsproviderclass-new.yaml
+    #       cat webapp-deployment.yaml
