--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,12 +49,12 @@ stages:
 
             terraform init -reconfigure -backend-config="access_key=$(TF_BACKEND_ACCESS_KEY)"
             terraform plan                 #-var "USER_NAME=$(TF_VAR_USER_NAME)"
-            terraform apply --auto-approve
-            terraform apply -refresh-only -auto-approve
-            client_id=$(terraform output kubelet_identity_client_id)
-            echo $client_id
-            echo "##vso[task.setvariable variable=test]$client_id"
-            echo $(test)
+           # terraform apply --auto-approve
+           # terraform apply -refresh-only -auto-approve
+          #  client_id=$(terraform output kubelet_identity_client_id)
+          #  echo $client_id
+          #  echo "##vso[task.setvariable variable=test]$client_id"
+          #  echo $(test)
 
     # - task: Bash@3
     #   inputs:
