--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ stages:
             terraform init -reconfigure -backend-config="access_key=$(TF_BACKEND_ACCESS_KEY)"
             terraform plan                
             terraform apply --auto-approve
-            terraform apply -refresh-only -auto-approve
+            #terraform apply -refresh-only -auto-approve
            client_id=$(terraform output kubelet_identity_client_id)
            echo $client_id
            echo "##vso[task.setvariable variable=test]$client_id"
