--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,3 +72,4 @@ stages:
           kubectl apply -f hpaweb.yaml
           cat secretsproviderclass-new.yaml
           cat webapp-deployment.yaml
+# dinesh
