--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ pool:
 
 stages:
 - stage: Build
-  displayName: 'Build Docker image'
+  displayName: 'Build Docker images'
   jobs:
   - job: BuildAndPushDocker
     pool:
