--- a/QA/kubernetes/webapp-deployment.yaml
+++ b/QA/kubernetes/webapp-deployment.yaml
@@ -24,6 +24,8 @@ spec:
           value: db-server
         - name: keyvault_url
           value: "https://kvdinesh007-qa.vault.azure.net"  
+        - name: client_id
+          value: "$new_id"
         - name: DB_PORT
           value: "3306"
         - name: DB_NAME
