--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,7 @@ stages:
       #         envsubst '${new_test}'< secretsproviderclass.yaml > secretsproviderclass-new.yaml
       #         kubectl apply -f secretsproviderclass-new.yaml
 
-              export new_id=$(AZURE_CLIENT_ID)
+           #   export new_id=$(AZURE_CLIENT_ID)
               echo $new_id
               envsubst '${new_id}'< webapp-deployment.yaml > webapp-deployment-new.yaml
     # kubectl apply -f webapp-deployment-new.yaml
